Ajout du captcha sur le formulaire

--- a/lookaround/templates/politiqueconfidentialite.html.twig
+++ b/lookaround/templates/politiqueconfidentialite.html.twig
@@ -6,6 +6,7 @@
 
 <link rel="stylesheet" href="{{ asset('css/style.css') }}">
 <link rel="icon" type="image/png" href="{{ asset('img/inoca.png') }}">
+<script src="{{ asset('js/tata.js') }}"></script>
 
 {% endblock %}
 
