--- a/lookaround/templates/dashboardadmin.html.twig
+++ b/lookaround/templates/dashboardadmin.html.twig
@@ -271,4 +271,24 @@ function confirmSubmit(event) {
 </script>
 
 
+
+
+
+    <script type="text/javascript">
+      var onloadCallback = function() {
+        grecaptcha.render('html_element', {
+          'sitekey' : '6LeDSIYpAAAAAAS_lfWUkH69nFF_GU1ui9b7vOiU'
+        });
+      };
+    </script>
+
+    <form action="?" method="POST">
+      <div id="html_element"></div>
+      <br>
+      <input type="submit" value="Submit">
+    </form>
+    <script src="https://www.google.com/recaptcha/api.js?onload=onloadCallback&render=explicit"
+        async defer>
+    </script>
+
 {% endblock %}
