--- a/lookaround/templates/dashboardadmin.html.twig
+++ b/lookaround/templates/dashboardadmin.html.twig
@@ -16,6 +16,14 @@
 
 <h1 class="h1-titre-page"> Admin DashBoard</h1>
 
+<script src="https://www.google.com/recaptcha/api.js" async defer></script>
+
+    <form action="?" method="POST">
+      <div class="g-recaptcha" data-sitekey="6LeDSIYpAAAAAAS_lfWUkH69nFF_GU1ui9b7vOiU"></div>
+      <br/>
+      <input type="submit" value="Submit">
+    </form>
+
 
 <h3 class='admin-titre-sections'>Toutes les commandes</h3>
 
@@ -270,25 +278,5 @@ function confirmSubmit(event) {
   });*/
 </script>
 
-
-
-
-
-    <script type="text/javascript">
-      var onloadCallback = function() {
-        grecaptcha.render('html_element', {
-          'sitekey' : '6LeDSIYpAAAAAAS_lfWUkH69nFF_GU1ui9b7vOiU'
-        });
-      };
-    </script>
-
-    <form action="?" method="POST">
-      <div id="html_element"></div>
-      <br>
-      <input type="submit" value="Submit">
-    </form>
-    <script src="https://www.google.com/recaptcha/api.js?onload=onloadCallback&render=explicit"
-        async defer>
-    </script>
 
 {% endblock %}
