--- a/lookaround/templates/index.html.twig
+++ b/lookaround/templates/index.html.twig
@@ -283,11 +283,7 @@
             
 -->
 
-            <div class="g-recaptcha" data-callback="testCaptcha"  data-sitekey="6LffU4YpAAAAAIQvvsIfNNiejIpl3yI_tHLzIEuI"></div>
-
-            <div class="input-area">
-                <input class="input_form_inscription" type="text" placeholder="Entrez le captcha" maxlength="6">
-            </div>
+            <div class="g-recaptcha" data-callback="setCaptchaValide"  data-sitekey="6LffU4YpAAAAAIQvvsIfNNiejIpl3yI_tHLzIEuI"></div>
         </div>
 
 
@@ -318,10 +314,6 @@
 
 
 <script>    
-
-function testCaptcha(){
-    alert("yes mam");
-}
 
     var isCaptchaValidated = false;
 
