--- a/lookaround/templates/index.html.twig
+++ b/lookaround/templates/index.html.twig
@@ -297,6 +297,8 @@
             <button type="button" id='go-submit-form' class="reserver-creneau-btn1">Valider</button>
 
             {#registrationForm.adresse_facturation#}
+
+             {{ form_end(registrationForm._token) }}
                 
             {{ form_end(registrationForm) }}
     </div>
