--- a/lookaround/templates/notreHistoire.html.twig
+++ b/lookaround/templates/notreHistoire.html.twig
@@ -8,7 +8,7 @@
 
     {% include 'fragments/navbar.html.twig' %}
 
-    <section class='section-content'>
+    <section class='section-content  background-grey-waves'>
 
         <div class='part-element'>
 
