--- a/lookaround/templates/politiquecookies.html.twig
+++ b/lookaround/templates/politiquecookies.html.twig
@@ -7,7 +7,7 @@
 <section class='body-background'>
     {% include 'fragments/navbar.html.twig' %}
 
-    <section class='section-content'>
+    <section class='section-content  background-grey-waves'>
         <div class='part-rules'>
             <h2>Politique en matière de cookies</h2>
 
