--- a/lookaround/templates/trouverUneVisite.html.twig
+++ b/lookaround/templates/trouverUneVisite.html.twig
@@ -6,7 +6,7 @@
 
     <section class='body-background'>
         {% include 'fragments/navbar.html.twig' %}
-        <section class='section-content'>
+        <section class='section-content  background-grey-waves'>
             <div class='part-element'>
                 <h1 class="h1-titre-page" >Recherchez une visite virtuelle à l'aide d'un numéro de référence</h1>
                 <div style="text-align: center; margin-top: 75px; margin-bottom: 120px">
