--- a/lookaround/templates/nosRealisations.html.twig
+++ b/lookaround/templates/nosRealisations.html.twig
@@ -8,7 +8,7 @@
 
     {% include 'fragments/navbar.html.twig' %}
 
-    <section class='section-content'>
+    <section class='section-content  background-grey-waves'>
         <div class='part-element'>
             <h1 class="h1-titre-page">Découvrez nos visites virtuelles précédemment réalisées</h1>
             <div class="visite-container-realisation" style="text-align: center; margin-top: 20px;">
