--- a/lookaround/templates/nosTarifs.html.twig
+++ b/lookaround/templates/nosTarifs.html.twig
@@ -6,7 +6,7 @@
 
 <section class='body-background'>
     {% include 'fragments/navbar.html.twig' %}
-    <section class='section-content'>
+    <section class='section-content  background-grey-waves'>
         <div class='part-tarifs'>
             <h1 class="h1-titre-page">Obtenez rapidement un devis grâce à notre simulateur</h1>
 
