--- a/lookaround/templates/politiqueconfidentialite.html.twig
+++ b/lookaround/templates/politiqueconfidentialite.html.twig
@@ -6,7 +6,7 @@
 
 <section class='body-background'>
     {% include 'fragments/navbar.html.twig' %}
-    <section class='section-content'>
+    <section class='section-content  background-grey-waves'  >
         <div class='part-rules'>
 
             <h2>Politique de confidentialité</h2>
