--- a/lookaround/templates/nosRealisations.html.twig
+++ b/lookaround/templates/nosRealisations.html.twig
@@ -3,6 +3,8 @@
 {% block title %} Nos réalisations - Réalisation de visites virtuelles à 360° {% endblock %}
 
 {% block body %}
+
+<script>document.querySelector("body").style.backgroundColor = "white";</script>
  
 <section class='body-background'>
 
