--- a/lookaround/templates/politiqueconfidentialite.html.twig
+++ b/lookaround/templates/politiqueconfidentialite.html.twig
@@ -4,6 +4,8 @@
 
 {% block body %}
 
+<script>document.querySelector("body").style.backgroundColor = "white";</script>
+
 <section class='body-background'>
     {% include 'fragments/navbar.html.twig' %}
     <section class='section-content  background-grey-waves'  >
