--- a/lookaround/templates/fragments/footer.html.twig
+++ b/lookaround/templates/fragments/footer.html.twig
@@ -2,9 +2,11 @@
     <div class='footer-container'>
     
         <div>
-            <a href="{{ path('conditionsGenerales')}}">Conditions générales</a>
-            <a href="{{ path('politiqueConfidentialite')}}">Politique de confidentialité</a>
-            <a href="{{ path('politiqueCookies')}}">Politique en matière de cookies </a>
+            <a href="{{ path('conditionsGenerales')}}">➤ Conditions générales</a>
+            <a href="{{ path('politiqueConfidentialite')}}">➤ Politique de confidentialité</a>
+            <a href="{{ path('politiqueCookies')}}">➤ Politique en matière de cookies </a>
         </div>
     </div>
+    <p class="copyright-p">lookaround® • Tout droits réservés • Copyright 2024</p>
 </div>
+
