--- a/lookaround/templates/notreHistoire.html.twig
+++ b/lookaround/templates/notreHistoire.html.twig
@@ -4,6 +4,9 @@
 
 {% block body %}
 
+
+<script>document.querySelector("body").style.backgroundColor = "white";</script>
+
 <section class='body-background'>
 
     {% include 'fragments/navbar.html.twig' %}
