--- a/lookaround/templates/fragments/base.html.twig
+++ b/lookaround/templates/fragments/base.html.twig
@@ -4,7 +4,10 @@
         <meta charset="UTF-8">
         <title>{% block title %}{% endblock %}</title>
         <meta name="description" content="Réalisation de visites virtuelles à 360°">
-        <meta name="keywords" content="visite virtuelle, immersion, expérience interactive, entreprise, produits, visite virtuelles, 3D, metaverse, immersif, logement, appartement, salle de sport, musée, université">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta name="author" content="David Konate">
+        
+        <meta name="keywords" content="visite virtuelle, photo, photographie, 360, caméra, visite, tourisme, innovation, 3D, interaction, photographe, immersion, expérience interactive, entreprise, produits, visite virtuelles, 3D, metaverse, immersif, logement, appartement, salle de sport, musée, université">
         <meta name="robots" content="index,follow">
         <link rel="stylesheet" href="{{ asset('css/style.css') }}" type="text/css">
         <link rel="icon" type="image/png" href="{{ asset('img/inoca.png') }}">
