--- a/lookaround/templates/nosTarifs.html.twig
+++ b/lookaround/templates/nosTarifs.html.twig
@@ -58,7 +58,7 @@
                         <input type="radio" id="radio-hors-idf" name="radioSelect-Zone"/>
                         <label style="width: 33.33%;" for="radio-hors-idf">Autres régions</label>
                         <input type="radio" id="radio-suisse-belgique" name="radioSelect-Zone"/>
-                        <label style="width: 33.33%;" for="radio-suisse-belgique">Belgique / Genève</label>
+                        <label style="width: 33.33%;" for="radio-suisse-belgique">A l'étranger</label>
                     </div>
             
                     <p>Nombre de prises de vues souhaités :</p>
@@ -110,7 +110,7 @@
 
         const radiosToTarif = {
         "radio-1-10" : 200, "radio-11-20" : 250, "radio-21-30" : 300, 
-        "radio-idf" : 149.90, "radio-hors-idf" : 279.90, "radio-suisse-belgique" : 489.90}
+        "radio-idf" : 149.90, "radio-hors-idf" : 249.90, "radio-suisse-belgique" : 449.90}
 
         var finalTarif = 0;
 
