--- a/lookaround/public/css/style.css
+++ b/lookaround/public/css/style.css
@@ -9,7 +9,7 @@
 }
 
 body {
-  background: #9ed0cc;
+  background: #a6f2e8;
 }
 
 .body-background{
@@ -213,6 +213,7 @@ body {
   margin: 0 auto;
   padding: 10px 0;
  /* border-bottom: 1px solid #e9e9e9;*/
+ transition: all 0.2s;
 
 }
 
@@ -224,7 +225,7 @@ body {
   line-height: 40px;
   padding: 9px 0px;
   font-size: 14.5px;
-  transition: font-weight 150ms; 
+  transition: all 0.2s;
 }
 
 .topnav a:hover{
@@ -309,6 +310,7 @@ body {
   padding: 40px 10px;
   border-bottom: 1px solid #8282821c;
   margin: 0 auto;
+  transition: all 0.2s;
 }
 
 .part-element h2{
@@ -345,7 +347,7 @@ body {
   border-bottom: 1px solid #8282821c;
 }
 
-.part-rules h2{
+.part-rules h1{
   font-weight: 100;
   font-size: 18px;
   font-weight: 500;
@@ -353,7 +355,7 @@ body {
   margin-bottom: 20px;
 }
 
-.part-rules h3{
+.part-rules h2{
   font-weight: 100;
   font-size: 14px;
   font-weight: 500;
@@ -430,7 +432,7 @@ body {
 /*IFRAME INDEX*/
 .visite-container{
   text-align: center;
-  width: 1000px;
+  width: 1100px;
   margin: 0 auto;
   height: 580.75px;
 }
@@ -500,7 +502,7 @@ body {
   /*width: 100%;*/
   width: min-content;
   margin-left: 25px;
-
+  transition: all 0.2s;
 }
 
 
@@ -512,6 +514,19 @@ body {
   border-bottom: 1px solid #8282821c;
   /*background-color: rgb(182, 182, 182);*/
   overflow: hidden;
+  transition: all 0.2s;
+
+
+}
+
+.backgroundImg{
+  background: url('../img/backgroundLinkedin4.jpg');
+  background-size: cover;
+  background-position: center;
+  width: 100%;
+  height: 420px;
+  position: absolute;
+  transition: all 0.2s;
 }
 
 
@@ -566,6 +581,10 @@ body {
   width: 100%;
   width: 1200px;
   margin: 0 auto;
+  /*
+  background-image: url('https://www.cjoint.com/doc/24_04/NDhekvWZMJI_futureBaniiereTest2.jpg');
+  background-size: cover;
+  */
 }
 
 
@@ -700,6 +719,7 @@ body {
   margin-right: 120px;
   margin-top: 0px;
  /* -webkit-filter: drop-shadow(1px 1px 1px #222);*/
+ display: none;
 }
 
 .container-descriptionTuto{
@@ -1278,7 +1298,6 @@ body {
   padding: 3px;
 }
 
-
 .card-tarif{
   border: 1px solid;
   width: fit-content;
@@ -1509,7 +1528,7 @@ input:checked + label{
   font-size: 12.5px;
 }
 
-.part-rules h2 {
+.part-rules h1 {
   font-size: 16px;
 }
 .part-elemenrulest p {
@@ -1559,7 +1578,7 @@ input:checked + label{
   font-size: 13px;
 }
 
-.part-rules h3 {
+.part-rules h2 {
   font-size: 14px;
 }
 
@@ -1599,6 +1618,10 @@ input:checked + label{
   font-size: 12.5px;
 }
 
+.backgroundImg{
+  height: 350px
+}
+
 .navbar1 a {
   font-size: 11.5px;
 }
@@ -1608,7 +1631,7 @@ input:checked + label{
 }
 
 .visite-container {
-  width: 900px;
+  width: 975px;
   height: 506.25px;
 }
 
@@ -1702,7 +1725,7 @@ input:checked + label{
   font-size: 22px !important;
 }
 
-.part-rules h3 {
+.part-rules h2 {
   font-size: 22px !important;
 }
 
@@ -1885,8 +1908,9 @@ label {
   }
 
   .visite-container {
-    width: 95%;
-    height: 1000px;
+    display: none;
+    /*width: 95%;
+    height: 1000px;*/
   }
 
   
@@ -1909,6 +1933,10 @@ label {
 
   .navbar1-container {
     
+  }
+  .backgroundImg{
+    height: 750px;
+    opacity: 0.1;
   }
 
   .part-form{
@@ -1939,7 +1967,7 @@ label {
   .part-rules p, .part-rules ul li  {
     font-size: 20px;
   }
-  .part-rules h2{
+  .part-rules h1{
     font-size: 30px;
   }
 
@@ -2048,6 +2076,7 @@ label {
 
 .video-container .video-container-content {
   text-align: center;
+  width: 100%;
 }
 
 .video-container .video-container-subcontent1 {
