--- a/lookaround/templates/index.html.twig
+++ b/lookaround/templates/index.html.twig
@@ -6,23 +6,24 @@
 
 <script src='https://www.google.com/recaptcha/api.js'></script>
 
-<section class='body-background' style="background: url('{{asset('img/background-index-blue.png')}}');  background-size: cover; ">
+<section class='body-background' style="background: linear-gradient(to bottom right, #4cb0a3, #a6f2e8);">
     {% include 'fragments/navbar.html.twig' %}
 <section class='section-content'>
 
     <div class='Partie-Exemples-1'>
+    <div class="backgroundImg" > </div>
 
         <div class="video-container">
             <div class="video-container-content">
-                <img class="photo-david" src="{{asset('img/img-index.png')}}"/>
+                <img loading="lazy"   alt="photo-david" class="photo-david" src="{{asset('img/img-index.png')}}" style="display:none"/>
                 <div class="video-container-subcontent1">
                     <p></p>
                     <h1 id='LeTitre' class='video-container-content-titre'>Réalisation de visites virtuelles à 360°</h1>
-                    <p class='video-container-content-text'>Offrez à vos clients une expérience unique qui les <br>transportera dans vos espaces, où qu'ils se trouvent.</p>
+                    <p class='video-container-content-text'>Offrez à vos clients une expérience unique qui les <br>transportera dans vos espaces, <br> où qu'ils se trouvent.</p>
                     <div class="reserver-creneau">
-                        <input onclick="smoothScroll('part-contact')" type='button' value='Prendre rendez-vous' class='btn-skin1 btn-dark-bg'/>
+                        <input onclick="smoothScroll('part-contact')" type='button' value='Prendre rendez-vous' class='btn-skin1 btn-dark-bg' style="background-color: #282828;"/>
                          <form method='post' action="{{ path('nosTarifs') }}" style="width: min-content;">
-                            <input type="submit" class='btn-skin2 btn-dark-bg' value ="Nos tarifs"></input>
+                            <input type="submit" class='btn-skin2 btn-dark-bg' value ="Nos tarifs" style="background-color: #555;"></input>
                         </form>
                     </div>
                 </div>
@@ -42,33 +43,31 @@
                     Elle recrée, grâce à des photos à 360°, une représentation visuelle d'un lieu, permettant aux utilisateurs de s'y déplacer librement.  
                 </p>
             </div>
-            <img class="img-asking" src="{{asset('img/icon-asking.png')}}" style="margin : 0 auto;width:135px; height:120px"/>
+            <img loading="lazy"   alt="wondering-img" class="img-asking" src="{{asset('img/icon-asking.png')}}" style="margin : 0 auto;width:135px; height:120px"/>
             <div  style="margin-top: 10px">
                 <p>Cela peut être particulièrement utile pour explorer des destinations touristiques, des propriétés immobilières, des musées, des sites historiques, des campus universitaires, des hôtels, des commerces, des salles de sport, etc.  
                 <br>Jetez un oeil à nos réalisations sur <a style="color: #219988; cursor: pointer; font-weight: 500;" href ='{{ path("nosRealisations")}}' >notre page dédiée</a></p>
-
             </div>
-        
          </div>
     </div>
     </div>
 
     <div class='part-element background-grey-waves' id="div-iframe" style="width: 100%">
         <div class="visite-container">
-            <iframe src="https://visite.lookaround.fr/18476802/?startscene=4&startlookat=-195.4,3.74,123.95,0.35,0;" scrolling="no" id="iframe-fullscreen" FRAMEBORDER="no" allowfullscreen></iframe>
+            <iframe loading="lazy"  src="https://visite.lookaround.fr/18476802/?startscene=4&startlookat=-195.4,3.74,123.95,0.35,0;" title="Visite virtuelle exemple" scrolling="yes" id="iframe-fullscreen" FRAMEBORDER="no" allowfullscreen></iframe>
         </div>
     </div>
     <!--
         background: #313131;
     -->
 
-     <div class='part-element-container' style="width: 100%;color: white; background: url('/svg/waves-black.svg'); background-size: cover;">
-     <div class='part-element'>
-        <h2>Qu'apporterait une visite virtuelle à mon site ?</h2>
+    <div class='part-element-container' style="width: 100%;color: white; background: url('/svg/waves-black.svg'); background-size: cover;">
+        <div class='part-element'>
+        <h2>Qu'apporterait une visite virtuelle à mon entreprise ?</h2>
         <div class='line-2' style="margin-top:20px; grid-gap: 7px">
 
         <div class="argument-card colored-argument" >
-            <img src="{{asset('img/360-view.png')}}" class="argument-img">
+            <img loading="lazy"   alt="icon-emoji" src="{{asset('img/360-view.png')}}" class="argument-img">
             <div>
                 <h3>Une réelle projection virtuelle</h3>
                 <p>Immergez vos visiteurs dans une projection virtuelle, leur permettant d'explorer votre espace depuis leur domicile</p>
@@ -76,7 +75,7 @@
         </div>
 
         <div class="argument-card colored-argument" >
-            <img src="{{asset('img/24-hours.png')}}" class="argument-img">
+            <img loading="lazy"    alt="icon-emoji"  src="{{asset('img/24-hours.png')}}" class="argument-img">
             <div>
                 <h3>Une accessibilité en continu</h3>
                 <p>Attirez des potentiels clients à toute heure de la journée ou de la nuit, même en dehors de vos heures d'ouverture</p>
@@ -84,7 +83,7 @@
         </div>
 
         <div class="argument-card colored-argument" >
-            <img src="{{asset('img/competition(1).png')}}" class="argument-img">
+            <img loading="lazy"   alt="icon-emoji"  src="{{asset('img/competition(1).png')}}" class="argument-img">
             <div>
                 <h3>Une différenciation concurrentielle</h3>
                 <p>Démarquez vous de vos concurrents en offrant une expérience plus virtuelle et interactive à vos futurs clients</p>
@@ -92,7 +91,7 @@
         </div>
 
         <div class="argument-card colored-argument" >
-            <img src="{{asset('img/euro(1).png')}}" class="argument-img">
+            <img loading="lazy"   alt="icon-emoji"  src="{{asset('img/euro(1).png')}}" class="argument-img">
             <div>
                 <h3>Une réduction des coûts de gestion des visites physiques</h3>
                 <p>Maximisez votre temps et vos ressources, et de concentrer vos efforts sur d'autres aspects de votre entreprise</p>
@@ -100,7 +99,7 @@
         </div>
 
         <div class="argument-card colored-argument" >
-        <img src="{{asset('img/la-technologie.png')}}" class="argument-img">
+        <img loading="lazy"   alt="icon-emoji"  src="{{asset('img/la-technologie.png')}}" class="argument-img">
         <div>
         <h3>Une présentation au gout du jour</h3>
             <p>Mettez en avant votre espace de manière plus attrayante et interactive, en captivant l'attention de vos visiteurs</p>
@@ -108,7 +107,7 @@
         </div>
 
         <div class="argument-card colored-argument" >
-        <img src="{{asset('img/communications.png')}}" class="argument-img">
+        <img loading="lazy"   alt="icon-emoji"  src="{{asset('img/communications.png')}}" class="argument-img">
         <div>
         <h3>Une facilité de partage</h3>
             <p>Vos visiteurs pourront facilement partager leur expérience avec leur entourage, ce qui va accroître votre visibilité.</p>
@@ -123,22 +122,30 @@
 
             <h2>Comment se déroule une prise de vue ?</h2>
             <div class="line-2" style="grid-gap: 5px;">
-                <div class="argument-card white-background"> <img class="argument-img" src='{{asset("img/telephone(1).png")}}' /><br> <div><h3>1- Premier contact</h3><p>Durant un appel, nous répondons à toutes vos questions, puis, nous convenons d'un RDV.</p></div></div>
-                <div class="argument-card white-background"> <img class="argument-img" src='{{asset("img/camera(1).png")}}'/><br> <div><h3>2- Prise de vue</h3><p >Le jour J, nous effectuons les prises de vues dans vos espaces. Cela peut durer entre 20 et 45 minutes.</p></div></div>
-                <div class="argument-card white-background"> <img class="argument-img" src='{{asset("img/computer.png")}}'/><br> <div><h3>3- Création de la visite</h3><p>Après le traitement et l'édition des photos, nous nous attelons à la création de la visite.</p></div></div>
-                <div class="argument-card white-background"> <img class="argument-img" src='{{asset("img/paquet.png")}}'/><br> <div><h3>4- Livraison de la visite</h3><p>Nous vous envoyons les packages de votre visite, ainsi que l'url sur laquelle nous l'hébergeons.</p></div></div>
+                <div class="argument-card white-background"> <img loading="lazy"   alt="icon-emoji"  class="argument-img" src='{{asset("img/telephone(1).png")}}' /><br> <div><h3>1- Premier contact</h3><p>Durant un appel, nous répondons à toutes vos questions, puis, nous convenons d'un RDV.</p></div></div>
+                <div class="argument-card white-background"> <img loading="lazy"   alt="icon-emoji"  class="argument-img" src='{{asset("img/camera(1).png")}}'/><br> <div><h3>2- Prise de vue</h3><p >Le jour J, nous effectuons les prises de vues dans vos espaces. Cela peut durer entre 20 et 45 minutes.</p></div></div>
+                <div class="argument-card white-background"> <img loading="lazy"   alt="icon-emoji"  class="argument-img" src='{{asset("img/computer.png")}}'/><br> <div><h3>3- Création de la visite</h3><p>Après le traitement et l'édition des photos, nous nous attelons à la création de la visite.</p></div></div>
+                <div class="argument-card white-background"> <img loading="lazy"   alt="icon-emoji"  class="argument-img" src='{{asset("img/paquet.png")}}'/><br> <div><h3>4- Livraison de la visite</h3><p>Nous vous envoyons les packages de votre visite, ainsi que l'url sur laquelle nous l'hébergeons.</p></div></div>
             </div>
+
+            <!--<div style="width: 800px; height: 450px; margin : 0 auto;
+                box-shadow: 0 1px 1px rgba(0, 0, 0, .12), 0 2px 2px rgba(0, 0, 0, .12), 0 4px 4px rgba(0, 0, 0, .12), 0 8px 8px rgba(0, 0, 0, .12), 0 16px 16px rgba(0, 0, 0, .12); margin-top: 1.6em; margin-bottom: 0.9em; overflow: hidden;
+                border-radius: 3px; will-change: transform;">
+                <iframe loading="lazy" style="position: absolute; width: 100%; height: 100%; top: 0; left: 0; border: none; padding: 0;margin: 0;"
+                src="https:&#x2F;&#x2F;www.canva.com&#x2F;design&#x2F;DAGDXEBNyh0&#x2F;4wbTrLQHRnxhxivrtCwQ2A&#x2F;view?embed" allowfullscreen="allowfullscreen" allow="fullscreen">
+                </iframe>
+            </div>-->
         </div>
     </div>
     <div class='part-element-container'  style="background-color:white">
-     <div class='part-element'>
-        <h2>Ils nous ont fait confiance</h2>
+        <div class='part-element'>
+            <h2>Ils nous ont fait confiance</h2>
         
         <div class="line-4 partenaires-container">
-            <img src="{{asset('img/clients/isifa.png')}}" class="partenaires-img" onclick="ouvrirNouvelOnglet('https://www.isifaplusvalues.com/')">
-            <img src="{{asset('img/clients/ihecf.jpg')}}" class="partenaires-img" onclick="ouvrirNouvelOnglet('https://www.ihecf.fr/')">
-            <img src="{{asset('img/clients/mbway.png')}}" class="partenaires-img" onclick="ouvrirNouvelOnglet('https://www.mbway.com/')">
-            <img src="{{asset('img/clients/ipac.jpg')}}"  class="partenaires-img" onclick="ouvrirNouvelOnglet('https://www.ipacbachelorfactory.com/')">
+            <img loading="lazy"   alt="icon-partenaire" src="{{asset('img/clients/isifa.png')}}" class="partenaires-img" onclick="ouvrirNouvelOnglet('https://www.isifaplusvalues.com/')">
+            <img loading="lazy"   alt="icon-partenaire" src="{{asset('img/clients/ihecf.jpg')}}" class="partenaires-img" onclick="ouvrirNouvelOnglet('https://www.ihecf.fr/')">
+            <img loading="lazy"   alt="icon-partenaire" src="{{asset('img/clients/mbway.png')}}" class="partenaires-img" onclick="ouvrirNouvelOnglet('https://www.mbway.com/')">
+            <img loading="lazy"   alt="icon-partenaire" src="{{asset('img/clients/ipac.jpg')}}"  class="partenaires-img" onclick="ouvrirNouvelOnglet('https://www.ipacbachelorfactory.com/')">
 
         </div>
     </div>
@@ -153,17 +160,17 @@
 
       
                 <div class="contact-div">
-                    <img src="{{ asset('img/telephone(1).png') }}" class="contact-img"/>
+                    <img loading="lazy"   alt="icon-contact" src="{{ asset('img/telephone(1).png') }}" class="contact-img"/>
                     <p class="contact-phone-number">06 51 45 01 06</p>
                 </div>
                     
                 <div class="contact-div">
-                    <img src="{{ asset('img/gmail.png') }}" class="contact-img"  onclick=" ouvrirNouvelOnglet('mailto:contact@lookaround.fr')"/>
+                    <img loading="lazy"   alt="icon-contact" src="{{ asset('img/gmail.png') }}" class="contact-img"  onclick=" ouvrirNouvelOnglet('mailto:contact@lookaround.fr')"/>
                     <p>contact@lookaround.fr</p>
                 </div>
 
                 <div class="contact-div">
-                    <img src="{{ asset('img/linkedin.png') }}" class="contact-img clickable" onclick=" ouvrirNouvelOnglet('https://www.linkedin.com/company/lookaround®/about/')"/>
+                    <img loading="lazy"   alt="icon-contact" src="{{ asset('img/linkedin.png') }}" class="contact-img clickable" onclick=" ouvrirNouvelOnglet('https://www.linkedin.com/company/lookaround®/about/')"/>
                     <p>lookaround®</p>
                 </div>
 
